fix: menu height on mobile

--- a/src/app/components/header/burger-menu/burger-menu.module.scss
+++ b/src/app/components/header/burger-menu/burger-menu.module.scss
@@ -22,7 +22,7 @@
 
   .menu {
     width: 100vw;
-    height: 100dvh;
+    height: calc(100% + 64px);
     position: absolute;
     left: 0;
     background-color: var(--light-gray-bg);
